--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -2,10 +2,15 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  align-items: flex-start;
   flex-wrap: wrap;
 
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+
   article {
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: left;
@@ -14,11 +19,19 @@
     padding: 30px 30px 15px 30px;
     background-color: #ecebeb;
     margin: 20px 0;
+
+    @media screen and (min-width: 768px) {
+      max-width: 25vw;
+    }
+
+    @media screen and (min-width: 1024px) {
+      max-width: 15vw;
+    }
   }
 
   .item-img {
-    max-height: 100%;
-    max-width: 100%;
+    height: 100%;
+    width: 100%;
     margin-bottom: 10px;
   }
 }
