--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -178,14 +178,24 @@ nav {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
 
+@media screen and (min-width: 768px) {
+  .item-container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
+
 .item-container article {
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -206,9 +216,21 @@ nav {
   margin: 20px 0;
 }
 
+@media screen and (min-width: 768px) {
+  .item-container article {
+    max-width: 25vw;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .item-container article {
+    max-width: 15vw;
+  }
+}
+
 .item-container .item-img {
-  max-height: 100%;
-  max-width: 100%;
+  height: 100%;
+  width: 100%;
   margin-bottom: 10px;
 }
 /*# sourceMappingURL=styles.css.map */
