--- a/src/scss/_cart.scss
+++ b/src/scss/_cart.scss
@@ -7,6 +7,7 @@
     flex-direction: column;
     align-items: center;
     margin: 20px;
+    border-bottom: 2px solid #333;
 
     @media screen and (min-width: $bp-min-tablet) {
       display: grid;
