--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -362,6 +362,7 @@ nav {
       -ms-flex-align: center;
           align-items: center;
   margin: 20px;
+  border-bottom: 2px solid #333;
 }
 
 @media screen and (min-width: 768px) {
