--- a/src/scss/_cart.scss
+++ b/src/scss/_cart.scss
@@ -6,7 +6,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 20px;
     border-bottom: 2px solid #333;
 
     @media screen and (min-width: $bp-min-tablet) {
@@ -140,5 +139,9 @@
         border: 2px solid rgba(218, 0, 0, 1);
       }
     }
+  }
+
+  &-total {
+    font-weight: 700;
   }
 }
